Fix vertical alignment of elements.
Former-commit-id: 16d9b3322625c47155e9c83984e5063626aed6fa

--- a/blocks/alert/_alert.scss
+++ b/blocks/alert/_alert.scss
@@ -2,7 +2,7 @@
 
 $ring-alert-font-size: 13px;
 $ring-alert-line-height: 1.3;
-$ring-alert-height: ($ring-alert-font-size * $ring-alert-line-height) + $ring-unit * 2;
+$ring-alert-height: floor(($ring-alert-font-size * $ring-alert-line-height) + $ring-unit * 2);
 $ring-alert-margin: 10px;
 
 // Alerts
@@ -154,7 +154,7 @@ $ring-alert-margin: 10px;
 
 body .ring-font-icon.ring-alert__icon,
 body .ring-font-icon.ring-alert__close {
-  line-height: $ring-alert-height !important;
+  line-height: $ring-alert-height - 1px !important;
 }
 
 .ring-font-icon.ring-alert__icon:before,
